- fixed invalid variable name in zm_absolute_href(..)
- fixed most PH notice issues (that logfile thingy comes quite handy here..)
- fix wrong privacy policy checkbox name in create_account.php
- make enable/disable gender/company/dob/state options work in views (create,
  update and address) and also adjust validation accordingly
- make update account work without dob

Release 0.8.0.1
- add active plugins to loader path; that means effectively, plugins may
  override any *default* class or controller
- fixed title for homepage, category, category_list, manufacturer and ezpages
  (ZMMetaTags)
- made view accessible from controller
- fixed a few leftover hardcoded response views from controllers
- added mapping id to ZMView
- moved ZMAjaxController::callZCPageController(..) as zm_call_zc_page into the
  misc package
- moved ZMPageView a bit, removed obsolete ZMThemeView
- added ZMPluginView to allow controller added by a plugin to serve custom
  content views from within the plugin folder
- added setting to enable/disable adding the store name to the page title
- fixed broken create account (email template was missin $zm_account)
- fixed source_view view
- added example of using ZenMagick from external PHP files

Release 0.8.0
- added cookie_usage view
- added code to allow ZenMagick to actually process POST requests
- added ZMLoginController for POST handling of logins
- added new setting 'postRequestEnabledList' to allow POST request handling
  for configured pages only
- added new method isValidSession() to ZMRequest
- add password and authorization to ZMAccount and actually populate them
- added new global $zm_validator instance for central validation config (this
  will be used for server side validation, too)
- added new all-in-one ZMValidator::insertJSValidation($id) method
- added extra/valdation.php to default theme which now contains all
  validations
- modified all views that use JS validation to use the new validation code